// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes text 1`] = `
<Translate(MFACodeComponent)
  isLoading={false}
  onChangeText={[Function]}
  onSubmit={[Function]}
  value="new text"
/>
`;

exports[`onSubmit changes loading property 1`] = `
<Translate(MFACodeComponent)
  isLoading={true}
  onChangeText={[Function]}
  onSubmit={[Function]}
  value=""
/>
`;

exports[`renders correctly 1`] = `
<Translate(MFACodeComponent)
  isLoading={false}
  onChangeText={[Function]}
  onSubmit={[Function]}
  value=""
/>
`;
